--- a/src/scss/components/_newUnit.scss
+++ b/src/scss/components/_newUnit.scss
@@ -58,5 +58,8 @@
     @media (max-width: 1020px) {
       max-width: 380px;
     }
+    @media (max-width: 550px) {
+      max-width: 320px;
+    }
   }
 }
