--- a/src/scss/components/_applicationItemBlock.scss
+++ b/src/scss/components/_applicationItemBlock.scss
@@ -1,13 +1,21 @@
 @import '../variables';
 
 .applicationItem-block-wrapper {
-  width: 410px;
+  -ms-text-kashida-space: 410px;
   text-align: center;
   margin-bottom: 65px;
   transition: all 0.2s ease-in-out;
   margin-top: 50px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+
+  @media screen and (max-width: 830px) {
+    max-width: 380px;
+  }
+  @media screen and (max-width: 550px) {
+    max-width: 310px;
+  }
 
   &:hover {
     transform: scale(1.03);
@@ -17,6 +25,13 @@
     width: 360px;
     margin-bottom: 10px;
     margin-top: 0;
+
+    @media screen and (max-width: 830px) {
+      max-width: 320px;
+    }
+    @media screen and (max-width: 550px) {
+      max-width: 270px;
+    }
   }
 
   .applicationItem-title {
@@ -49,11 +64,11 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 350px);
 
-  @media (max-width: 1060px) {
+  @media (max-width: 1330px) {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media (max-width: 730px) {
+  @media (max-width: 915px) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
