--- a/src/scss/components/_catalogueRequest.scss
+++ b/src/scss/components/_catalogueRequest.scss
@@ -10,6 +10,10 @@
   margin-top: 70px;
   margin-bottom: 40px;
 
+  @media screen and (max-width: 900px) {
+    padding: 10px;
+  }
+
   h3,
   h4 {
     margin: 5px;
