--- a/src/scss/components/_fullApplicationItem.scss
+++ b/src/scss/components/_fullApplicationItem.scss
@@ -10,11 +10,17 @@
     @media (max-width: 1020px) {
       width: 420px;
     }
+    @media (max-width: 490px) {
+      width: 300px;
+    }
   }
 
   &__title {
     margin-top: 20px;
     font-size: 24px;
+    @media (max-width: 490px) {
+      font-size: 20px;
+    }
   }
 
   &__subtitle {
@@ -25,6 +31,10 @@
     @media (max-width: 1020px) {
       max-width: 400px;
     }
+    @media (max-width: 490px) {
+      font-size: 16px;
+      max-width: 300px;
+    }
   }
 
   &__note {
@@ -33,6 +43,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 490px) {
+      max-width: 300px;
+    }
 
     &-question {
       font-size: 18px;
@@ -41,12 +54,18 @@
         max-width: 400px;
         margin-bottom: 30px;
       }
+      @media (max-width: 490px) {
+        font-size: 16px;
+      }
     }
     &-answer {
       font-size: 18px;
       text-decoration: underline;
       @media (max-width: 1020px) {
         max-width: 400px;
+      }
+      @media (max-width: 490px) {
+        font-size: 16px;
       }
     }
     ul {
@@ -59,6 +78,9 @@
         letter-spacing: 0.5px;
         margin-top: 3px;
         font-size: 17px;
+        @media (max-width: 490px) {
+          font-size: 15px;
+        }
         span {
           color: $orange;
           font-weight: 600;
