--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -238,7 +238,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
+      max-width: 18%;
 
       &-minus {
         svg {
@@ -270,7 +270,7 @@ body {
       }
 
       b {
-        font-size: 22px;
+        font-size: 15px;
       }
     }
 
@@ -282,8 +282,7 @@ body {
 
       b {
         font-weight: bold;
-        font-size: 22px;
-        letter-spacing: 0.01em;
+        font-size: 15px;
       }
     }
 
@@ -401,6 +400,9 @@ body {
     @media screen and (max-width: 750px) {
       max-width: 470px;
     }
+    @media screen and (max-width: 500px) {
+      max-width: 330px;
+    }
 
     h2 {
       font-size: 36px;
@@ -409,6 +411,9 @@ body {
 
       @media screen and (max-width: 750px) {
         font-size: 26px;
+      }
+      @media screen and (max-width: 500px) {
+        font-size: 20px;
       }
     }
 
@@ -420,6 +425,9 @@ body {
 
       @media screen and (max-width: 750px) {
         font-size: 16px;
+      }
+      @media screen and (max-width: 500px) {
+        font-size: 14px;
       }
     }
 
@@ -439,6 +447,10 @@ body {
       margin-bottom: 40px;
       font-weight: 600;
       font-size: 18px;
+      @media screen and (max-width: 500px) {
+        width: 80px;
+        font-size: 14px;
+      }
     }
   }
 }
